updated the pictures to Anitas photos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   
-  <link rel="shortcut icon" href="/assets/IMG-20210328-WA0004.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/IMG-20210326-WA0025.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Anitaesther Website</title>
 </head>
@@ -67,7 +67,7 @@
         You can see my work on this page. </p>
       <p></p>
     </div>
-    <img src="/assets/IMG-20210328-WA0004.jpg" alt="Emmanuel working with his computer" class="about-me__img">
+    <img src="/assets/IMG-20210326-WA0025.jpg" alt="Anitaesther working with her computer" class="about-me__img">
   </section>
   <section class="my-work" id="work">
     <h2 class="section__title">My Work</h2>
