updated the photos with Anita's

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       Hi, I am <strong>Anitaesther Antia Nsikak</strong> 
     </h1>
     <p class="section__subtitle section__subtitle--intro">UX Designer</p>
-    <img src="/assets/IMG-20210326-WA0025.jpg" alt="A picture of dev Emmanuel" class="intro__img">
+    <img src="/assets/anita-in-red.jpg" alt="A picture of Anitaesther" class="intro__img">
   </section>
   <section class="my-services" id="services">
     <h2 class="section__title section__title--services">What I do</h2>
@@ -67,7 +67,7 @@
         You can see my work on this page. </p>
       <p></p>
     </div>
-    <img src="/assets/IMG-20210326-WA0025.jpg" alt="Anitaesther working with her computer" class="about-me__img">
+    <img src="/assets/anita.jpg" alt="Anitaesther working with her computer" class="about-me__img">
   </section>
   <section class="my-work" id="work">
     <h2 class="section__title">My Work</h2>
