added a favicon with Anita's pix

--- a/freelance-booking.html
+++ b/freelance-booking.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-  <link rel="shortcut icon" href="/assets/IMG-20210326-WA0025.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/anita-in-red.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Anitaesther website</title>
 </head>
@@ -32,7 +32,7 @@
       Freelance <strong>Booking</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">Freelance Booking App</p>
-    <img src="assets/free.png" alt="A picture of dev Emmanuel" class="intro__img">
+    <img src="assets/free.png" alt="A picture of Anita" class="intro__img">
   </section>
   <div class="portfolio-item-individual">
     <p>This app is used to search for daily workers whom you can employ their srevices to get a job done.</p>
