--- a/hatchway.html
+++ b/hatchway.html
@@ -5,9 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-  <link rel="shortcut icon" href="/assets/IMG-20210328-WA0004.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/anita-in-red.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
-  <title>Dev Emmanuel Ochade Website</title>
+  <title>Anitaesther Website</title>
 </head>
 <body>
   <header>
@@ -32,7 +32,7 @@
       Hatchway Students <strong>Page</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">Hatchway Students Record</p>
-    <img src="/assets/DefaultImage.png" alt="A picture of dev Emmanuel" class="intro__img">
+    <img src="/assets/DefaultImage.png" alt="A picture of Anitaesther" class="intro__img">
   </section>
   <div class="portfolio-item-individual">
     <p>Hathcway students page is a website for a fictitious school, Hatchway.It is meant to display students information including grades. It was built using React and Bootstrap.</p>
@@ -45,7 +45,7 @@
   </div>
   
   <footer class="footer">
-    <a href="mailto: eochade15@gmail.com" class="footer__link">hello@emmanuel.dev</a>
+    <a href="mailto: anitaking131@gmail.com" class="footer__link">hello@anita.design</a>
     <ul class="social-link">
       <li class="social-link__item">
         <a href="https://github.com/Klasss4Web" class=""><i class="fab fa-github"></i></i></a>
@@ -54,11 +54,11 @@
         <a href="" class=""><i class="fab fa-twitter"></i></a>
       </li>
       <li class="social-link__item">
-        <a href="https://linkedin.com/in/emmanuel-ochade" class=""><i class="fab fa-linkedin-in"></i></a>
+        <a href="" class=""><i class="fab fa-linkedin-in"></i></a>
       </li>
       <li class="social-link__item"><a href="" class=""></a></li>
     </ul>
-    <small>&copy;2012,  EmmanuelOchade</small>
+    <small>&copy;2022,  Anitaesther</small>
   </footer>
 
    <!------------------Font Awesome Kit--------------------->
