--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   
-  <link rel="shortcut icon" href="/assets/IMG-20210326-WA0025.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/anita-in-red.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Anitaesther Website</title>
 </head>
