--- a/mentors-booking.html
+++ b/mentors-booking.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
-  <link rel="shortcut icon" href="/assets/IMG-20210326-WA0025.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="/assets/anita-in-red.jpg" type="image/x-icon">
   <link rel="stylesheet" href="style.css">
   <title>Anitaesther Website</title>
 </head>
@@ -32,7 +32,7 @@
       Mentors Booking <strong>Page</strong>
     </h1>
     <p class="section__subtitle section__subtitle--intro">A Website for Booking Professionals</p>
-    <img src="/assets/DefaultImage.png" alt="A picture of dev Emmanuel" class="intro__img">
+    <img src="/assets/DefaultImage.png" alt="A picture of Anita" class="intro__img">
   </section>
   <div class="portfolio-item-individual">
     <p>A simple Responsive web app for booking mentors, gives young professionals the chance to get guidance and direction from industry leaders. It also gives experienced professionals the platform to share their experience and impact the upcoming professionals in their fields.</p>
