updated the name

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
         <li class="nav__item"><a href="#services" class="nav__link">My service</a></li>
         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
         <li class="nav__item"><a href="#work" class="nav__link">My Work</a></li>
-        <li class="nav__item"><a href="#resume" class="nav__link">My Resume</a></li>
+        <li class="nav__item"><a href="#" class="nav__link">My Resume</a></li>
       </ul>
     </nav>
   </header>
   <section class="intro" id="home">
     <h1 class="section__title section__title--intro">
-      Hi, I am <strong>Anitaesther Antia Nsikak</strong> 
+      Hi, I am <strong>Anitaesther Nsikak Antia</strong> 
     </h1>
     <p class="section__subtitle section__subtitle--intro">UX Designer</p>
     <img src="/assets/anita-in-red.jpg" alt="A picture of Anitaesther" class="intro__img">
